# shalacritty

./: .gitignore  Cargo.toml  build.rs
res/: background.fs  background.vs  char_rect.fs  char_rect.vs  copy_scan_buffer.vs  rect.fs  rect.vs
src/: app.rs  config.rs  lib.rs  main.rs  workspace.rs
src/gfx/: background_renderer.rs  content_plotter.rs  glyph_manager.rs  glyph_writer.rs  graphics_ash.rs  graphics_wgpu.rs  mod.rs  renderer.rs
src/gfx/detail/: background_renderer.rs  cursor_renderer.rs  mod.rs  scan_buffer_renderer.rs  text_renderer.rs
src/multiplexers/: mod.rs  shell_manager.rs  tile_manager.rs
src/multiplexers/detail/: mod.rs  virtual_window_manager.rs
src/tty/: mod.rs  teletype_manager.rs
src/util/: diff.rs  mod.rs
src/window/: mod.rs  window_manager.rs
src/workspace/: mod.rs  multiplexers_adapter.rs  virtual_window_manager.rs
src/workspace/detail/: mod.rs  multiplexers_adapter.rs
src/workspace/multiplexers/: mod.rs
