[package]
name = "shalacritty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alacritty_terminal = { git = "https://github.com/alacritty/alacritty.git", rev = "e07bf6f" }
crossfont = { version = "0.5.0", features = ["force_system_fontconfig"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "macro-diagnostics"] }
winit = "0.28"
wgpu = "0.17.1"

bmp = "*"

[build-dependencies]
naga = { version = "0.13.0", features = ["glsl-in", "spv-out"] }
