[package]
name = "shalacritty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alacritty_terminal = { git = "https://github.com/alacritty/alacritty.git", rev = "e07bf6f" }
bytemuck = "*"
crossfont = { version = "0.5.0", features = ["force_system_fontconfig"] }
nalgebra = "0.32.3"
notify = { git = "https://github.com/notify-rs/notify.git", rev = "146790b" }
raw-window-handle = "0.5.0"
serde = { version = "1.0.104", features = ["derive"] }
toml = { version = "0.8.6" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "macro-diagnostics"] }
winit = "0.29.2"

# 2023/10/29 時点の trunk
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "ad3094c", features = [ "vulkan-portability"] }

[build-dependencies]
naga = { version = "0.13.0", features = ["glsl-in", "spv-out"] }

[dev-dependencies]
bmp = "*"
