[package]
name = "shalacritty"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alacritty_terminal = { git = "https://github.com/alacritty/alacritty.git", rev = "v0.13.1" }
ash = { version = "0.22.0" }
bytemuck = { version = "*", features = ["derive"] }
crossfont = { version = "0.7.0", features = ["force_system_fontconfig"] }
image = "0.24.7"
nalgebra = "0.32.3"
notify = { git = "https://github.com/notify-rs/notify.git", rev = "146790b" }
raw-window-handle = "0.6.0"
serde = { version = "1.0.104", features = ["derive"] }
toml = { version = "0.8.6" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "macro-diagnostics"] }
winit = "0.29.3"

wgpu = { version = "0.19.0", features = ["vulkan-portability"] }

[build-dependencies]
naga = { version = "0.19.0", features = ["glsl-in", "spv-out"] }

[dev-dependencies]
bmp = "*"
